--- a/frontend/src/components/home.css
+++ b/frontend/src/components/home.css
@@ -4,10 +4,12 @@
   display: flex;
   flex-direction: column;
   height: 100vh;
+  width: 80vw;
   align-items: center;
 }
 
 .chat-output {
+  text-align: left;
   flex: 1;
   overflow-y: auto;
   padding: 16px;
@@ -15,7 +17,7 @@
   font-size: 1rem;
   line-height: 1.4;
   color: #333;
-  width: 60%;
+  width: 100%;
   display: flex;
 flex-direction: column;
 justify-content: flex-end;
